# FusionAIHub

./: .gitignore  .readthedocs.yaml  CITATION.cff  CLAUDE.md  DEVLOG.md  LICENSE  README.md  README.rst  development_guide.md  main.py  preprocessing_stats.pt  pyproject.toml  requirements.txt  run_demo.py  test_config.yaml  train_single_modality.ipynb
.github/workflows/: python-package.yml
Dataset_prep/: data_prep_obj.py
commands/: prepare_data.sh
docs/: ResearchPlan.MD  functions.md  spectro_video_status.md
docs/papers/: AST.md  ConvNeXt.md  ConvNeXtV2.md  DiTo.md  JiT.md  Pix2Pix.md  PixelDiT.md  R3GAN.md
docs/source/: conf.py  index.rst
examples/Data_fetching/: .gitignore  check_copy_and_rm.py  fetch_GAdata.py  fetch_toksearch.py  mygadata.py
examples/Dataset_prep/: 0read_data_run.ipynb  data_prep_obj.py  tamplet_dataset_survey.py  tamplet_discharge_study.py  tamplet_spectro.py
examples/Machine_Learning/: joblib_dataset_examples.py  lightning_trainer_example.py  mae_example.py  ray_tune_examples.py
hackathon/: Hackathon.ipynb  co2_to_mse.ipynb
inspect_spectrograms/: probe_shapes.py  step0_inspect.py
notebooks/: accessing_data.ipynb  data_preparation.ipynb  data_preparation_ts.ipynb
notebooks/config/: egebench.yaml  magnetics.yaml
notebooks/hackathon/: Hackathon.ipynb
scripts/: actuator_reconstruction.py  eval_video_reconstruction.py  profile_indexing.py  profile_reconstruction.py  run_demo_2.py  run_demo_3.py  spectrogram_reconstruction.py  train_co2_channel_ast.sh  train_ece_channel_ast.sh  train_mhr_channel_ast.sh  train_unimodal.sh  train_unimodal_autoencoder.py  train_video_reconstruction.py  visualize_mhr_channel_ast.py
scripts/data_fetching_omega/: config_atlas.yaml
scripts/data_preparation/: make_processing_stats.py  prepare_data.py
scripts/explore/: beam_avg_power.py  explore_actuators.ipynb  utils.py
scripts/notebooks/: test_model.ipynb
scripts/slurm/: benchmark_data_loader.sh  make_processing_stats.sh  prepare_data.sh  train_bes.sh  train_bolo_raw.sh  train_cer_rot.sh  train_cer_ti.sh  train_co2.sh  train_co2_ast_fsq.sh  train_co2_ast_fsq_resume.sh  train_co2_channel_ast_diffusion_fw16.sh  train_co2_channel_ast_diffusion_fw16_d512.sh  train_co2_channel_ast_fsq.sh  train_co2_channel_ast_gan_fw16.sh  train_co2_channel_ast_merge_fw4.sh  train_co2_channel_ast_merge_fw8.sh  train_co2_channel_ast_merge_k4_fw8.sh  train_co2_channel_ast_merge_k4_fw8_deep.sh  train_co2_channel_ast_nofsq.sh  train_co2_channel_ast_nofsq_fw16.sh  train_co2_channel_ast_nofsq_fw16_msloss.sh  train_co2_channel_ast_nofsq_fw8.sh  train_co2_cnn1d.sh  train_co2_cnn_bn_sweep.sh  train_co2_cnn_bottleneck.sh  train_co2_cnn_nonorm.sh  train_co2_cnn_norm.sh  train_co2_cnn_perceiver.sh  train_co2_cnn_perceiver_fsq.sh  train_co2_cnn_perceiver_n128.sh  train_co2_convnext_bn32_allshots.sh  train_co2_convnext_bn32_s4.sh  train_co2_convnext_bn32_s4_compress.sh  train_co2_convnext_fsq.sh  train_co2_fsq_vae.sh  train_co2_fsq_vae_patch8.sh  train_co2_fsq_vae_patch8_matched.sh  train_co2_fsq_vae_small.sh  train_co2_fsq_vae_specaugment.sh  train_co2_mae.sh  (+19 more)
scripts/slurm_della_milan/: setup_rocm_env.sh  train_ddp.sh  train_e2e_stage1_ddp.sh  train_e2e_stage2_ddp.sh  train_e2e_stage2_delta_ddp.sh
scripts/slurm_frontier/: _compare_profiles.py  _frontier_common.sh  _frontier_settings.sh  _profile_node.sh  _srun_rank_wrapper.sh  _summarize_profile.py  benchmark_attn_kernels.sh  build_dataset_cache.sh  (+33 more)
src/: run_demo.py
tests/: test_autoencoder.py  test_diffusion_autoencoder.py  test_gan_autoencoder.py  test_loss.py  test_model_shapes.py  test_train_blocks_base.py  test_train_blocks_block_based_decoder.py  test_train_blocks_block_based_encoder.py  test_train_blocks_decoder.py  test_train_blocks_encoder.py  test_train_blocks_residual.py  test_train_blocks_residual_encoding_1d.py  test_train_configuration.py
(+270 files in other folders)
