[project]
name = "faith"
requires-python = ">= 3.11"
authors = [
  { name = "Azarakhsh Jalalvand", email = "azarakhsh.jalalvand@princeton.edu" },
  { name = "Peter Steiner", email = "peter.steiner@princeton.edu" },
  { name = "Nathaniel Chen", email = "nathaniel@princeton.edu" },
  { name = "Kouroche Bouchiat", email = "bouchiat@princeton.edu" },
]
dependencies = []
dynamic = ["version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/faith/__init__.py"

[tool.pixi.workspace]
channels = ["conda-forge", "ga-fdp"]
platforms = ["linux-64", "win-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
faith = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.11,<3.12"

[tool.pixi.feature.fdp]
platforms = ["linux-64"]

[tool.pixi.feature.fdp.dependencies]
toksearch = { channel = "ga-fdp" }
toksearch_d3d = { channel = "ga-fdp" }

[tool.pixi.environments]
fdp = ["fdp"]
